--- a/23.验证.html
+++ b/23.验证.html
@@ -10,7 +10,7 @@
     <parent :message="message" :message2.sync="data"></parent>
 </div>
 <template id="tmpl">
-    {{message}} <input type="text" v-model="message2">
+    default:{{message}} <input type="text" v-model="message2">
 </template>
 <script src="vue.js"></script>
 <script>
@@ -22,12 +22,12 @@
                 default: function () {
                     return 2000;//不需要type验证
                 },
-                validator: function (v) {
-                    return v=='hello200'
-                },
-                coerce: function (v) {
-                    return v+200;//在所有验证之前先进行赋值
-                }
+//                validator: function (v) {
+//                    return v=='hello200'
+//                },
+//                coerce: function (v) {
+//                    return v+200;//在所有验证之前先进行赋值
+//                }
             },
             'message2':{
                 twoWay:true
@@ -37,7 +37,7 @@
     var vm = new Vue({
         el:'#app',
         data:{
-            message:'hello',
+//            message:'hello',
             data:'world'
         }
     });
